--- a/static/css/portafolio.css
+++ b/static/css/portafolio.css
@@ -146,11 +146,10 @@
 
 .first-column{
   display: grid;
-  grid-template-columns: 2fr 0.75fr;
+  grid-template-columns: 2fr 0.25fr;
   gap: 25px;
   align-items: center;
   justify-items: center;
-  margin-inline: 10px;
 }
 
 .card{
@@ -164,6 +163,12 @@
   box-shadow: var(--shadow-4);
   border-radius: 1.5rem;
   height: 100%;
+  transition: 0.3s ease-in-out;
+}
+
+.redirect.card:hover{
+  /*padding: 46px;*/
+  scale: 103%;
 }
 
 .big-card{
@@ -174,7 +179,7 @@
   padding-top: 40px;
   height: fit-content;
   width: 100%;
-  gap: 125px;
+  gap: 160px;
 }
 
 span.button-icon{
@@ -193,6 +198,10 @@ span.button-icon{
   border-radius: 50%;
   position: relative;
   overflow: hidden;
+}
+
+.custom-cursor-link:hover{
+  cursor: pointer;
 }
 
 .discord, .instagram, .theme{
@@ -291,7 +300,7 @@ span.button-icon{
 
 .second-column{
   display: grid;
-  grid-template-columns: 0.35fr 0.35fr 1fr;
+  grid-template-columns: 0.25fr 0.25fr 1fr;
   margin-top: 25px;
   gap: 25px;
 }
@@ -312,6 +321,11 @@ span.button-icon{
   right: 2rem;
   font-size: 20px;
   color: var(--cool-gray);
+  transition: 0.3s ease-in-out;
+}
+
+.social-media-link:hover > div > .micro-icon{
+  top: 1.7rem;
 }
 
 .second-title{
@@ -336,7 +350,7 @@ span.button-icon{
   justify-content: center;
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 15px;
+  row-gap: 5px;
   column-gap: 5px;
 }
 
